FIXED links to Adonthell website

--- a/README
+++ b/README
@@ -37,10 +37,6 @@ check the Adonthelli Documentation Wiki
 
     http://adonthell.berlios.de/doc/
 
-or the Adonthell website:
-
-    http://adonthell.linuxgames.com/download/documentation.php
-
 
 Contact:
 ========
@@ -48,7 +44,7 @@ Contact:
 You can reach us in various ways:
 
 Mailing list:  adonthell-general@nongnu.org
-Web site:      http://adonthell.linuxgames.com
+Web site:      http://adonthell.nongnu.org
 Tech support:  http://savannah.nongnu.org/support/?group_id=702
 
 
@@ -60,7 +56,7 @@ would like to hear about it. Please use the Development mailing list
 (adonthell-devel@nongnu.org) for that. You can
 subscribe to the mailing lists at
 
-    http://adonthell.linuxgames.com/contact/mailinglist.shtml
+    http://adonthell.nongnu.org/contact/mailinglist.shtml
 
 
 Thank you for trying this software.
